--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 
     <title>Movie App</title>
-    <script src="script.js" defer></script>
 </head>
 
 <body>
     <header>
-        <form>
+        <form id='form'>
             <input type="text" id="search" class="search" placeholder="Search">
         </form>
     </header>
-    <main class="main">
+    <main id="main">
 
         <div class="movie"><img
                 src="https://images.unsplash.com/photo-1518173835740-f5d14111d76a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1477&q=80"
@@ -61,6 +60,8 @@
             </div>
         </div>
     </main>
+    <script src="script.js"></script>
+
 </body>
 
 </html>
